--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-animated-heart": "^0.0.8",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
